# brutal

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  brutal.tiled-session  update_assets.sh  vcpkg.json
assets/map/: brutal.tiled-session  test.json  test.tmx
assets/map/tilesets/: plains.json  plains.tsx
documentation/: Doxyfile
include/: helper.h
licenses/: json.txt  raylib.txt
src/: UUID.cpp  UUID.h  common.h  helper.cpp  helper.h  json.h  main.cpp  render.h
src/editor/: editor.cpp  editor.h
src/editor/component/: component.cpp  component.h  textcomponent.cpp  textcomponent.h
src/editor/window/: editorwindow.cpp  editorwindow.h  gameobjectwindow.cpp  gameobjectwindow.h  inspectorwindow.cpp  inspectorwindow.h  layerwindow.cpp  layerwindow.h  window.cpp  window.h
src/game/: component.h  game.cpp  game.h  gameobject.cpp  gameobject.h  level.cpp  level.h
src/graphics/: animation.cpp  animation.h  bitmap.cpp  bitmap.h  graphics.h  layer.cpp  layer.h  objectlayer.cpp  objectlayer.h  sprite.cpp  sprite.h  tilelayer.cpp  tilelayer.h  tileset.cpp  tileset.h  tilesetpack.cpp  tilesetpack.h
src/script/: apigameobject.cpp  apigameobject.h  apiglobal.cpp  apiglobal.h  apishared.cpp  apishared.h  scriptcore.cpp  scriptcore.h
src/ui/: button.cpp  button.h  text.cpp  text.h
test/: CMakeLists.txt  entt_test.cpp  game_test.cpp  game_test.h  graphic_test.cpp  graphic_test.h  helper_test.cpp  lua_test.cpp  script_test.cpp  sprite_test.cpp  ui_test.cpp
test/testdata/: Knight.json  bbr.json  button.json  instance.lua  level.json  levelgameobject.json  namespace.lua  onClick.lua  onTick.lua  plains.json  player.json  preprocess_post.lua  preprocess_pre.lua  scripttest.json  test.json  text.json  ticktest.json  tilepack.json
